Fix : CSS visibility des sous-éléments de collapser

--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -82,6 +82,7 @@
   transition: all $ds44-timing-slower ease-in-out;
   max-height: 0;
   overflow: hidden;
+  visibility: hidden;
 }
 
 .ds44-collapser_content--link,
